# ChessGame

./: .gitattributes  .gitignore  README.md
.run/: Run editor.run.xml
data/: resources.registry  scene.rgs
data/data/: resources.registry
data/scenes/: level.ui  levels.ui  main.ui
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-wasm/: Cargo.toml  script.js  styles.css
executor-wasm/data/: resources.registry  scene.rgs
executor-wasm/data/scenes/: level.ui  main.ui
executor-wasm/pkg/: executor_wasm.d.ts  executor_wasm.js  executor_wasm_bg.js  executor_wasm_bg.wasm.d.ts  package.json
executor-wasm/src/: lib.rs
executor/src/: main.rs
export-cli/: Cargo.toml
export-cli/src/: main.rs
game/: Cargo.toml
game-dylib/: Cargo.toml
game-dylib/src/: lib.rs
game/src/: checkerboard.rs  checkerboardBuilder.rs  lib.rs  ui_components.rs
